<resources>
    <string name="app_name">ACS</string>
    <string name="manage_setting">设置</string>
    <string name="manage_network_setting">网络参数设置</string>
    <string name="manage_system_setting">系统参数查看</string>
    <string name="manage_open">开闸</string>
    <string name="manage_close">关闸</string>
    <string name="manage_title">管理员功能</string>
    <string name="server_ip_or_">IP地址或域名</string>
    <string name="server_port">端口号</string>
    <string name="server_connect_test">连接</string>
    <string name="server_title">设置</string>
    <string name="network_ip">IP</string>
    <string name="network_ip_address">IP地址</string>
    <string name="text_default">---</string>
    <string name="network_gateway">网关</string>
    <string name="network_mask">子网掩码</string>
    <string name="network_dns">DNS</string>
    <string name="network_title">网络设置</string>
    <string name="network_save">保存配置</string>
    <string name="system_title">系统信息</string>
    <string name="main_permission_request">权限请求</string>
    <string name="main_permission_agree">同意</string>
    <string name="main_permission_denied">不同意</string>
    <string name="main_permission_not_enough">权限不足</string>
    <string name="server_connect_cancel">取消</string>
    <string name="network_cancel">取消</string>
    <string name="network_static">静态</string>
    <string name="network_dhcp">DHCP</string>
    <string name="main_wait_pair">等待识别...</string>
    <string name="server_device_name">设备名称</string>
    <string name="manage_client_setting">客户端设置</string>
    <string name="client_title_name">设置首页标题</string>
    <string name="wifiOn">wifi on</string>
    <string name="wifiOff">wifi off</string>
    <string name="pair_success">识别成功</string>
    <string name="person_name">姓名 : </string>
    <string name="worker_number">卡号 : </string>
    <string name="device_sn">设备 SN</string>
    <string name="server_ip">服务器IP地址</string>
    <string name="server_port_">服务器端口</string>
    <string name="face_pair_number">特征值对比阈值</string>
    <string name="face_pair_type">当前检测方式</string>
    <string name="pair_success_wait_time">检测成功或失败后的暂停时间(毫秒)</string>
    <string name="open_door_type">开门条件</string>
    <string name="open_door_conitue_time">开门持续时间(毫秒)</string>
    <string name="open_door">开门锁类型</string>
    <string name="device_support_time">设备维护时间</string>
    <string name="device_in_or_out">设备进出类型</string>
    <string name="welcome_message">欢迎信息</string>
    <string name="ji_dian_qi">继电器</string>
    <string name="wg">维根</string>
    <string name="app_max_memory">APP最大内存</string>
    <string name="app_use_memory">APP已经分配的内存</string>
    <string name="system_version">当前系统版本</string>
    <string name="app_version">APP版本</string>
    <string name="device_register_time">设备注册时间</string>
    <string name="device_open_conitue_time">设备开机后到现在时间</string>
    <string name="device_people_size">登记人数</string>
    <string name="in">进</string>
    <string name="out">出</string>
    <string name="hour">小时</string>
    <string name="face_and_id">人脸+身份证</string>
    <string name="worke_id">工号</string>
    <string name="face_and_ic">人脸+工号</string>
    <string name="face">人脸</string>
    <string name="alive">活体检测</string>
    <string name="not_alive">非活体检测</string>
    <string name="pair_fail">识别失败</string>
    <string name="pairing">正在识别</string>
    <string name="main_title">首页标题</string>
    <string name="down_load_person">正在下载人员信息</string>
    <string name="down_load_person_end">下载人员信息完毕</string>
    <string name="current_open_door_type">当前开门方式是继电器</string>
    <string name="title">人脸识别系统</string>
    <string name="down_video">正在下载视频</string>
    <string name="yuntianlifei">算法1.1</string>
    <string name="old_math">算法1.0</string>
    <string name="toast_hongtuan">当前算法是 算法1.0</string>
    <string name="toast_yuntianlifei">当前算法是 算法1.1</string>
    <string-array name="spinner_arr">
        <item>静态</item>
        <item>DHCP</item>
    </string-array>

    <string name="photo_tips_before">开始拍照</string>
    <string name="photo_tips_after">拍照结束</string>

    <string name="code_0">成功</string>
    <string name="code_1">未知错误</string>
    <string name="code_100">客户端错误</string>
    <string name="code_101">缺少参数</string>
    <string name="code_102">参数错误</string>
    <string name="code_103">秘钥验证失败</string>
    <string name="code_104">图片保存失败</string>
    <string name="code_105">图片尺寸错误</string>
    <string name="code_106">图片找不到人脸</string>
    <string name="code_107">passCount 格式错误</string>
    <string name="code_108">passCount 取值范围错误</string>
    <string name="code_109">startTs 格式错误</string>
    <string name="code_110">startTs 取值范围错误</string>
    <string name="code_111">endTs 格式错误</string>
    <string name="code_112">endTs 取值范围错误</string>
    <string name="code_113">IDFaceRate 格式错误</string>
    <string name="code_114">IDFaceRate 取值范围错误</string>
    <string name="code_115">faceRate 格式错误</string>
    <string name="code_116">faceRate 取值范围错误</string>
    <string name="code_117">passField 格式错误</string>
    <string name="code_118">passField 取值范围错误</string>
    <string name="code_119">passType 格式错误</string>
    <string name="code_120">passType 取值范围错误</string>
    <string name="code_121">period 取值范围错误</string>
    <string name="code_122">url 格式错误</string>
    <string name="code_123">正在拍照</string>
    <string name="code_124">图片格式错误</string>
    <string name="code_125">图片提取特征值失败</string>
    <string name="code_126">人员不存在</string>
    <string name="code_127">图片解析失败</string>
    <string name="code_128">人员达到最大限度,无法添加人员</string>
    <string name="code_129">IC卡号不正确 </string>
    <string name="code_1000">服务端错误</string>
    <string name="code_10000">服务端未知错误</string>
    <string name="license_down_fail">License 下载失败</string>
    <string name="license_down_success">License 下载成功</string>
    <string name="less_license">缺少 License</string>
    <string name="license_down_loading">正在准备下载 License 文件,请稍后</string>
    <string name="msg_down_success">信息下载成功 : </string>
    <string name="msg_down_fail">信息下载失败 : </string>
    <string name="device_ini">程序初始化,请稍后...</string>
    <string name="device_init_finish">程序初始化结束</string>
    <string name="down_msg_person">下载人员信息 : </string>
    <string name="delete_person">正在删除人员,请稍后...</string>
    <string name="down_load_authority">正在下人员权限 :</string>
    <string name="sdk_init_fail">SDK 初始化失败</string>

    <string name="sdk_init_0">程序初始化 : IFACE_RECSDK_INIT</string>
    <string name="sdk_init_1">程序初始化 : IFACE_RECSDK_CAPTURER_CREATE</string>
    <string name="sdk_init_2">程序初始化 : IFACE_RECSDK_DETECT_CREATE</string>
    <string name="sdk_init_3">程序初始化 : IFACE_RECSDK_EXTRACT_CREATE</string>
    <string name="sdk_init_4">程序初始化 : IFACE_RECSDK_COMPARE_CREATE</string>
    <string name="sdk_init_5">程序初始化 : IFACE_RECSDK_PREDICTOR_CREATE</string>
    <string name="sdk_init_6">程序初始化 : IFACE_ALGORITHM_1.0</string>
    <string name="sdk_init_7">程序初始化 : IFACE_PAIR_THREAD_ONE</string>
    <string name="sdk_init_8">程序初始化 : IFACE_PAIR_THREAD_TWO</string>
    <string name="sdk_init_9">程序初始化 : IFACE_PAIR_THREAD_THREE</string>
    <string name="sdk_init_10">程序初始化 : IFACE_NETWORK_SERVICE</string>
    <string name="sdk_init_11">程序初始化 : IFACE_SERIAL_SERVICE</string>
    <string name="read_person_size_fail">人数读取失败</string>
    <string name="sdk_init_ing">程序正在初始化,请稍后...</string>
    <string name="input_now">当前输入 :</string>
    <string name="down_load_license">下载 license</string>
    <string name="ic_card_no_register">IC卡未登记,请登记</string>
    <string name="hard_ware_connect_success">连接成功</string>
    <string name="hard_ware_connect_fail">连接失败</string>
    <string name="hard_ware_read_success">读取成功</string>
    <string name="hard_ware_read_fail">读取失败</string>
    <string name="camera_now_input">当前输入 :</string>
    <string name="camera_title_first">请将身份证放入读卡区,并将头像正对识别区域...</string>
    <string name="camera_take_photo">拍照</string>
    <string name="camera_take_photo_count_down">准备拍照 倒数 -</string>
    <string name="camera_msg_commit">请确认图片信息是否清晰准确...</string>
    <string name="camera_next">下一步 3#</string>
    <string name="camera_previous">上一步 1#</string>
    <string name="camera_id_photo_error">图片不存在,返回默认状态</string>
    <string name="camera_pairing_photo">正在比对图片...</string>
    <string name="camera_msg_second">请将身份证放入读卡区,并将头像正对识别区域...</string>
    <string name="camera_input_id_card">请刷身份证</string>
    <string name="camera_name">姓名 :</string>
    <string name="camera_sex">性别 :</string>
    <string name="camera_nation">民族 :</string>
    <string name="camera_birthday">出生 :</string>
    <string name="camera_location">住址 :</string>
    <string name="camera_id_number">身份证号码 :</string>
    <string name="camera_id_time">有效日期 :</string>
    <string name="camera_sign">签发机关 :</string>
    <string name="camera_now_location">当前居住地址 :</string>
    <string name="camera_init_error">初始化发生错误 :</string>
    <string name="camera_number_input">数字键盘 :</string>
    <string name="camera_id_model">身份证模块 :</string>
    <string name="camera_msg_three">请确认图片是否清晰准确...</string>
    <string name="camera_msg_four">请确认身份证信息是否准确...</string>
    <string name="camera_commmit">确定 9#</string>
    <string name="camera_check_person">正在查询人员是否存在...</string>
    <string name="camera_change_person_msg">正在修改人员信息...</string>
    <string name="camera_change_success">修改信息成功</string>
    <string name="camera_check_success">查询成功</string>
    <string name="camera_error_1">发生异常</string>
    <string name="camera_less_param">缺少参数</string>
    <string name="camera_connect_fail">连接失败</string>
    <string name="camera_data_error">数据异常</string>
    <string name="camera_not_exist">人员不存在</string>
    <string name="camera_load_fail">图片加载失败</string>
    <string name="camera_change_fail">修改失败</string>
    <string name="camera_lian_fail">联发科信息查询失败</string>
    <string name="server_port_error">端口设置错误,请重新设置</string>
    <string name="server_divece_name_null">设备名称不能为空</string>
    <string name="server_connecting">正在连接,请稍后...</string>
    <string name="server_close">关闭</string>
    <string name="server_connect_fail">连接失败</string>
    <string name="server_ip_port_exist">IP 和 端口 已经存在</string>
    <string name="server_input_null">输入不能为空</string>
    <string name="server_set_success">设置成功</string>
    <string name="server_connet_success">连接成功</string>
    <string name="ic_no_login">IC卡未登记,请登记</string>
    <string name="camera_unkonw">未知</string>
    <string name="setting_for_haogonge_save">保存</string>
    <string name="setting_for_haogonge_pre_page">上一页</string>
    <string name="setting_for_haogonge_next_page">下一页</string>
    <string name="server_get_server_ip_fail">获取服务器IP地址失败</string>
    <string name="server_get_server_ip">获取服务器IP地址...</string>
    <string name="setting_for_haogonge_save_success">保存成功</string>
    <string name="setting_for_haogonge_sn">设备SN</string>
    <string name="setting_for_haogonge_ip">设备IP</string>
    <string name="setting_for_haogonge_url">接口地址</string>
    <string name="setting_for_haogonge_model">设备型号</string>
    <string name="setting_for_haogonge_code">设备制造商代码</string>
    <string name="setting_for_haogonge_eth_mac">以太网MAC地址</string>
    <string name="setting_for_haogonge_interface_version">接口版本</string>
    <string name="setting_for_haogonge_card_id">读卡器ID</string>
    <string name="setting_for_haogonge_compare_threshold">比对阈值</string>
    <string name="haogonge_register_device_failure">registerDevice命令失败</string>
    <string name="server_reset">重置服务器IP</string>
    <string name="server_search">查找服务器</string>
    <string name="huoti">活体</string>


</resources>
