<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/dimen_10dp"
        android:background="@drawable/shape_popup_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:gravity="center"
            android:text="@string/network_ip"

            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_static"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_55dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/network_static"

                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18sp"/>

            <RadioButton
                android:id="@+id/rb_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_20dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dhcp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_55dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/network_dhcp"

                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18sp"/>

            <RadioButton
                android:id="@+id/rb_dhcp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_20dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/shape_popup_cancel"
            android:gravity="center"
            android:text="@string/network_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp"/>
    </LinearLayout>

</LinearLayout>